force-app/main/default/objects/Kit_Product_Part__c/Kit_Product_Part__c.object-meta.xml
<CustomObject>
    <label>Product Part</label>
    <nameField>
        <displayFormat>KPP-{0000}</displayFormat>
        <label>Kit Product Part Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Parts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>