force-app/main/default/objects/Kit_Product_Part__c/fields/Kit_Children__c.field-meta.xml
<CustomField>
    <fullName>Kit_Children__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Kit Children Inventory Type should not be equal to Kit.</errorMessage>
        <filterItems>
            <field>Product2.AcctSeed__Inventory_Type__c</field>
            <operation>notEqual</operation>
            <value>Kit</value>
        </filterItems>
        <infoMessage>This page only shows products where Inventory Type is not equal to Kit.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Parts (Products)</relationshipLabel>
    <relationshipName>Parts_Products</relationshipName>
    <type>Lookup</type>
</CustomField>