force-app/main/default/objects/Kit_Product_Part__c/fields/Kit_Product_Part__c.field-meta.xml
<CustomField>
    <fullName>Kit_Product_Part__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Part</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Kit Product Part should not be equal to Kit Children. And Kit Product Part Inventory Type should not be equal to Kit.</errorMessage>
        <filterItems>
            <field>Product2.AcctSeed__Inventory_Type__c</field>
            <operation>notEqual</operation>
            <value>Kit</value>
        </filterItems>
        <filterItems>
            <field>$Source.Id</field>
            <operation>notEqual</operation>
            <valueField>$Source.Kit_Children__c</valueField>
        </filterItems>
        <infoMessage>This page only shows products where Inventory Type is not equal to Kit.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Part Parents (Products)</relationshipLabel>
    <relationshipName>Parts_Parent_Product</relationshipName>
    <type>Lookup</type>
</CustomField>