force-app/main/default/objects/Kit_Product_Part__c/fields/QuantityLink__c.field-meta.xml
<CustomField>
    <fullName>QuantityLink__c</fullName>
    <formula>HYPERLINK(&apos;/apex/InventoryInformationPage?id=&apos;&amp;Kit_Product_Part__c, TEXT(Quantity__c), &apos;_blank&apos;)</formula>
    <label>Quantity</label>
    <type>Text</type>
</CustomField>